--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body {
+    background-image: url(https://source.unsplash.com/featured/);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
